[project]
name = "ab-testing-mobile-games"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "nbclient>=0.10.4",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
